@@ -1,3 +1,9 @@
+2007-02-28  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixcore/scriptedflow/vm/ScriptVM.java (mangleDoc): 
+	Fixed bug in iteration over NodeList: Indexes in NodeList are not constant
+	if one of the nodes is deleted.
+
 2007-02-22  Martin Leidig  <mleidig@schlund.de>
 
 	Renamed JSON bean (de-)serialization annotations. As 'Transient'
